test/types/errors/assignTypes.good
assignTypes.chpl:17: In method '=':
assignTypes.chpl:18: error: illegal assignment to type
  assignTypes.chpl:21: called as R.=(lhs: R(int(64)), rhs: R(int(64)))
